--- a/User_interface/src/main/java/lk/ijse/view/dashboard.html
+++ b/User_interface/src/main/java/lk/ijse/view/dashboard.html
@@ -6,7 +6,6 @@
     <title>POS System - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.js"></script>
     <style>
         body {
             background-color: #f8f9fa;
@@ -80,7 +79,7 @@
         </div>
     </div>
 </div>
-
+<script src="../js/jquery.js"></script>
 <script>
     function updateDateTime() {
         let now = new Date();
