user authenticate done

--- a/User_interface/src/main/java/lk/ijse/view/register.html
+++ b/User_interface/src/main/java/lk/ijse/view/register.html
@@ -77,9 +77,9 @@
                 success: function (data) {
                     alert("Registration Successful!");
 
-                    if (data.token) {
-                        localStorage.setItem("authToken", data.token);
-                    }
+                    // if (data.token) {
+                    //     localStorage.setItem("authToken", data.token);
+                    // }
 
                     if (userData.role === "ADMIN") {
                         window.location.href = "dashboard.html";
