user authenticate done

--- a/User_interface/src/main/java/lk/ijse/view/dashboard.html
+++ b/User_interface/src/main/java/lk/ijse/view/dashboard.html
@@ -59,7 +59,7 @@
         <!-- Navigation Buttons -->
         <div class="row mt-4">
             <div class="col-6 mb-3">
-                <a href="customer.html" class="btn btn-custom w-100 p-3">Manage Customers</a>
+                <a href="../js/customer.html" class="btn btn-custom w-100 p-3">Manage Customers</a>
             </div>
             <div class="col-6 mb-3">
                 <a href="item.html" class="btn btn-custom w-100 p-3">Manage Items</a>
